--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,8 +1,14 @@
+* {
+   font-family: 'Poppins', 'Times New Roman', Times, serif;
+}
+
 .container {
     display: flex;
+    height: 520px;
     background-color: #1a5dbc;
     border: #040404 solid 2px;
     border-radius: 15px;
+    margin-top: 50px;
 }
 
 .container img {
@@ -17,12 +23,12 @@
 
 .text-block {
     position: absolute;
-    bottom: 450px;
+    bottom: 500px;
     right: 20px;
     color: white;
     padding-left: 20px;
     padding-right: 75px;
-    font-size: 30px;
+    font-size: 38px;
 }
 
 body {
@@ -31,6 +37,7 @@ body {
 
 .cards {
     display: flex;
+    float: left;
     width: 40%;
     height: 300px;
     background-color: aliceblue;
@@ -45,8 +52,57 @@ body {
     border-radius: 15px;
 }
 
+.btn {
+    width: 100%;
+    border: 1px solid #040404;
+    background-color:rgb(202, 220, 245);
+    font-size: medium;
+    padding: 10px;
+    margin: 5px;
+    text-align: left;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: rgb(151, 192, 251);
+}
+
+#next-btn {
+    background-color: blueviolet;
+    color: aliceblue;
+    font-size: medium;
+    padding-top: 5px;
+    margin: 35px;
+    margin-top: 200px;
+    text-align: left;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
+}
+
+.card {
+    display: flex;
+    float: left;
+    height: 300px;
+    padding-left: 50px;
+    width: 20%;
+    background-color: aliceblue;
+    padding-bottom: 30px;
+    padding-top: 10px;
+    margin-top: 15px;
+    margin-left: 50px;
+    margin-bottom: 15px;
+    font-size: 26px;
+    border: #040404 solid 2px;
+    border-radius: 15px;
+}
+
 #submit {
     width: 25%;
     padding: 5px;
     margin: 0px;
+    background-color: #1a5dbc;
+    color: aliceblue;
 }
+
