--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    bottom: 300px;
+    bottom: 400px;
     right: 20px;
     color: white;
     padding-left: 40px;
@@ -71,10 +71,13 @@ body {
 }
 
 #next-btn {
-    background-color: blueviolet;
+    background-color: rgb(18, 96, 192);
     color: aliceblue;
-    font-size: medium;
-    padding-top: 5px;
+    font-size: large;
+    font-weight: bold;
+    padding:5px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin: 35px;
     margin-top: 200px;
     text-align: left;
