--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -107,9 +107,10 @@ p {
     display: inline-flex;
     font-size: 26px; 
     padding-top: 10px;
-    margin-top: 15px;
+    
     margin-bottom: 15px;
     margin-left:40px;
+    font-weight: bold;
 }
 
 .correct {
@@ -124,13 +125,14 @@ p {
 
 @media screen and (max-width: 768px) {
     .cards {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 9px;
         margin-right:10px;
         padding-bottom:20px;
         width: 92%;
     }
     .card {
+        margin-top: 5px;
         width: 60%;
         justify-content: left;
         margin-left: 100px;   
@@ -139,6 +141,9 @@ p {
     .text-block {
         font-size:x-large;
         margin-left: 100px;
+    }
+    .container {
+        margin-top: 5px;
     }
     .container img {
         width:85%;
